changes made to the swagger documentation
